[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Batyr Jumageldiyew <jumageldiyewb@list.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.0"}
SQLAlchemy = "^1.4.22"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]