[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Batyr Jumageldiyew <jumageldiyewb@list.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.22"
alembic = "^1.6.5"
redis = "^3.5.3"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]